# AI-assisted-chemical-sensing

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yaml
src/chemsense/vision/: __init__.py  logging_configuration.py  types.py
src/chemsense/vision/cli/: __init__.py  classification_analysis.py  encode_images.py  few_shot_analysis.py  process_images.py
src/chemsense/vision/modeling/: __init__.py  classification.py  encoders.py
src/chemsense/vision/processing/: __init__.py  raw_data_processor.py
src/chemsense/vision/resources/datasets/red_wines/: AmaroneValpolicella_10.txt  AmaroneValpolicella_11.txt  AmaroneValpolicella_3.txt  AmaroneValpolicella_4.txt  AmaroneValpolicella_5.txt  AmaroneValpolicella_6.txt  AmaroneValpolicella_7.txt  AmaroneValpolicella_8.txt  AmaroneValpolicella_9.txt  BarberaDAlba2017_10.txt  BarberaDAlba2017_11.txt  BarberaDAlba2017_2.txt  BarberaDAlba2017_3.txt  BarberaDAlba2017_4.txt  BarberaDAlba2017_5.txt  BarberaDAlba2017_6.txt  BarberaDAlba2017_7.txt  BarberaDAlba2017_8.txt  BarberaDAlba2017_9.txt  Barolo2014_10.txt  Barolo2014_11.txt  Barolo2014_3.txt  Barolo2014_4.txt  Barolo2014_5.txt  Barolo2014_6.txt  Barolo2014_7.txt  Barolo2014_8.txt  Barolo2014_9.txt  PalazzoDellaTorre_10.txt  PalazzoDellaTorre_11.txt  PalazzoDellaTorre_2.txt  PalazzoDellaTorre_3.txt  PalazzoDellaTorre_4.txt  PalazzoDellaTorre_5.txt  PalazzoDellaTorre_6.txt  PalazzoDellaTorre_7.txt  PalazzoDellaTorre_8.txt  PalazzoDellaTorre_9.txt  PasseggiandInVigna_10.txt  PasseggiandInVigna_11.txt  (+28 more)
src/chemsense/vision/resources/tests/raw_data/: a_1.txt  b_2.txt
tests/: __init__.py  test_raw_data_processor.py
