[build-system]
requires = ["setuptools >= 59.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "pandas.*",
    "pyts.*",
    "sklearn.*",
    "torchvision.*",
    "transformers.*"
]
ignore_missing_imports = true
