[metadata]
name = AI-assisted-chemical-sensing
version = attr: chemsense.vision.__version__
description = Foundation vision models applied to sensor array data
author = AI4SD team
author_email = gianmarco.gabrieli1403@gmail.com
license = "Apache 2.0 License"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IBM/AI-assisted-chemical-sensing
project_urls =
    Documentation = https://github.com/IBM/AI-assisted-chemical-sensing/blob/main/README.md
    Repository = https://github.com/IBM/AI-assisted-chemical-sensing
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8
zip_safe = False
include_package_data = True
install_requires =
    importlib-resources>=6.1.0
    matplotlib>=3.8.0
    numpy>=1.22.4
    pandas>=1.4.3
    pyts>=0.12.0
    scikit-learn>=1.1.1
    torch>=2.0.1
    torchvision>=0.15.2
    transformers>=4.30.2

[options.entry_points]
console_scripts=
    chemsense-classification-analysis = chemsense.vision.cli.classification_analysis:main
    chemsense-encode-images = chemsense.vision.cli.encode_images:main
    chemsense-few-shot-analysis = chemsense.vision.cli.few_shot_analysis:main
    chemsense-process-images = chemsense.vision.cli.process_images:main

[options.packages.find]
where = src

[options.package_data]
chemsense.vision =
    py.typed
    resources/datasets/red_wines/*.txt
    resources/tests/raw_data/*.txt

[options.extras_require]
dev =
    black>=23.1.0
    bump2version>=1.0.1
    flake8>=6.0.0
    isort>=5.12.0
    mypy>=1.0.0
    pytest>=5.3.4
    pytest-cov>=2.8.1
    types-setuptools>=57.4.14
    pre-commit>=3.0.4

analysis =
    jupyter>=1.0.0

[flake8]
extend-ignore = E203, E501
